force-app/main/default/objects/Account_Contact_Relation__e/Account_Contact_Relation__e.object-meta.xml
<CustomObject>
    <description>Integration SF -&gt; Grace
ZRD</description>
    <label>Account Contact Relation PE</label>
    <pluralLabel>Account Contact Relation PEs</pluralLabel>
</CustomObject>