force-app/main/default/objects/Account_Contact_Relation__e/fields/Account_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Number__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZRD
3.</description>
    <label>Account Customer Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>