force-app/main/default/objects/Account_Contact_Relation__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZRD
3.</description>
    <label>AccountId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>