force-app/main/default/objects/Account_Contact_Relation__e/fields/Contact_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_ID__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZRD
3.</description>
    <label>Contact Person ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>