force-app/main/default/objects/Account_Contact_Relation__e/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZRD
3.</description>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>