force-app/main/default/objects/Account_Contact_Relation__e/fields/Direct__c.field-meta.xml
<CustomField>
    <fullName>Direct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration relevant (Grace)
2. ZRD
3.</description>
    <label>Direct</label>
    <type>Checkbox</type>
</CustomField>