force-app/main/default/objects/Account_Contact_Relation__e/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZRD
3.</description>
    <label>EndDate</label>
    <type>Date</type>
</CustomField>