force-app/main/default/objects/Account_Contact_Relation__e/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZRD
3.</description>
    <label>Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>