force-app/main/default/objects/Account_Contact_Relation__e/fields/Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Id__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZRD
3.</description>
    <label>Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>